--- a/video.html
+++ b/video.html
@@ -60,7 +60,7 @@
     <h2>Verification Required</h2>
     <p>To continue watching the video, please complete a quick verification.</p>
     
-    <a href="https://www.revenuecpmgate.com/qpw1dm7gt?key=b06b34a800fa3c4e9065db751e48a6e5" class="btn">Click to Continue</a>
+    <a href="https://www.revenuecpmgate.com/sjp09zxr?key=c61de077e0bec514557381b392723aae" class="btn">Click to Continue</a>
 
     <div class="disclaimer">
       This process is required to prevent bots and automated traffic.
