--- a/video.html
+++ b/video.html
@@ -69,7 +69,7 @@
     <h2>Verification Required</h2>
     <p>To continue watching the video, please complete a quick verification.</p>
     
-    <a href="https://www.revenuecpmgate.com/sjp09zxr?key=c61de077e0bec514557381b392723aae" class="btn">Click to Continue</a>
+    <a href="https://www.revenuecpmgate.com/etd78upyst?key=79bb48e1393ca87ffb8a34df336a9a72" class="btn">Click to Continue</a>
 
     <div class="disclaimer">
       This process is required to prevent bots and automated traffic.
