--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vidiy.Video</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0f0f0f;
+      color: #ffffff;
+    }
+    header {
+      display: flex;
+      align-items: center;
+      padding: 20px 40px;
+      border-bottom: 1px solid #1f1f1f;
+    }
+    header h1 {
+      color: #3b82f6;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    .hero {
+      text-align: center;
+      padding: 100px 20px;
+    }
+    .hero h2 {
+      font-size: 42px;
+      font-weight: 800;
+      margin-bottom: 20px;
+    }
+    .hero p {
+      font-size: 18px;
+      color: #cccccc;
+      max-width: 650px;
+      margin: 0 auto;
+    }
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 60px 40px;
+      background-color: #1a1a1a;
+    }
+    .feature {
+      background-color: #2a2a2a;
+      padding: 20px;
+      border-radius: 12px;
+    }
+    .feature h3 {
+      color: #3b82f6;
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+    .feature p {
+      color: #cccccc;
+      font-size: 16px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      border-top: 1px solid #1f1f1f;
+      color: #999999;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Vidiy.Video</h1>
+  </header>
 
+  <section class="hero">
+    <h2>Upload, Host & Share Your Videos</h2>
+    <p>Vidiy.Video makes video hosting simple. Upload content, share with the world, and stream with lightning-fast performance.</p>
+  </section>
+
+  <section class="features">
+    <div class="feature">
+      <h3>Fast Uploads</h3>
+      <p>Seamlessly upload videos of any size with optimized delivery.</p>
+    </div>
+    <div class="feature">
+      <h3>Global Streaming</h3>
+      <p>Powered by CDN for smooth playback anywhere in the world.</p>
+    </div>
+    <div class="feature">
+      <h3>Embed Anywhere</h3>
+      <p>Easily embed your hosted videos on websites, blogs, or apps.</p>
+    </div>
+    <div class="feature">
+      <h3>Analytics</h3>
+      <p>Track views, watch time, and engagement with real-time stats.</p>
+    </div>
+  </section>
+
+  <footer>
+    © <script>document.write(new Date().getFullYear());</script> Vidiy.Video. All rights reserved.
+  </footer>
+</body>
+</html>
