--- a/index.html
+++ b/index.html
@@ -109,5 +109,11 @@
   <footer>
     © <script>document.write(new Date().getFullYear());</script> Vidiy.Video. All rights reserved.
   </footer>
+  <script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'hxqjd99kpk',
+    });
+</script>
+
 </body>
 </html>
