--- a/video.html
+++ b/video.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0BJ6393YJL"></script>
 <script>
@@ -75,5 +77,11 @@
       This process is required to prevent bots and automated traffic.
     </div>
   </div>
+  <script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'hxqjd99kpk',
+    });
+</script>
+
 </body>
 </html>
