--- a/video.html
+++ b/video.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0BJ6393YJL"></script>
@@ -71,17 +70,12 @@
     <h2>Verification Required</h2>
     <p>To continue watching the video, please complete a quick verification.</p>
     
-    <a href="https://heavenlytotal.com/LmkhJ9" class="btn">Click to Continue</a>
+    <a href="https://www.revenuecpmgate.com/sjp09zxr?key=c61de077e0bec514557381b392723aae" class="btn">Click to Continue</a>
 
     <div class="disclaimer">
       This process is required to prevent bots and automated traffic.
     </div>
   </div>
-  <script type="text/javascript">
-    aclib.runAutoTag({
-        zoneId: 'hxqjd99kpk',
-    });
-</script>
 
 </body>
 </html>
