--- a/video.html
+++ b/video.html
@@ -70,7 +70,7 @@
     <h2>Verification Required</h2>
     <p>To continue watching the video, please complete a quick verification.</p>
     
-    <a href="https://www.revenuecpmgate.com/sjp09zxr?key=c61de077e0bec514557381b392723aae" 
+    <a href="https://global1.bollywoodbiofacts.com/top-20-best-hospitals-in-bangalore-2025/?utm_source=SRm&utm_medium=s" 
        class="btn" 
        onclick="gtag('event', 'click', {
           event_category: 'Affiliate',
